// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/prompts/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-prompts"
  >
    <h5
      class="ant-typography ant-prompts-title"
    >
      ✨ Inspirational Sparks and Marvelous Tips
    </h5>
    <div
      class="ant-prompts-list"
    >
      <div
        class="ant-prompts-item"
      >
        <div
          class="ant-prompts-icon"
        >
          <span
            aria-label="bulb"
            class="anticon anticon-bulb"
            role="img"
            style="color: #FFD700;"
          >
            <svg
              aria-hidden="true"
              data-icon="bulb"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-prompts-content"
        >
          <h6
            class="ant-prompts-label"
          >
            Ignite Your Creativity
          </h6>
          <p
            class="ant-prompts-desc"
          >
            Got any sparks for a new project?
          </p>
        </div>
      </div>
      <div
        class="ant-prompts-item"
      >
        <div
          class="ant-prompts-icon"
        >
          <span
            aria-label="info-circle"
            class="anticon anticon-info-circle"
            role="img"
            style="color: #1890FF;"
          >
            <svg
              aria-hidden="true"
              data-icon="info-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-prompts-content"
        >
          <h6
            class="ant-prompts-label"
          >
            Uncover Background Info
          </h6>
          <p
            class="ant-prompts-desc"
          >
            Help me understand the background of this topic.
          </p>
        </div>
      </div>
      <div
        class="ant-prompts-item"
      >
        <div
          class="ant-prompts-icon"
        >
          <span
            aria-label="rocket"
            class="anticon anticon-rocket"
            role="img"
            style="color: #722ED1;"
          >
            <svg
              aria-hidden="true"
              data-icon="rocket"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-prompts-content"
        >
          <h6
            class="ant-prompts-label"
          >
            Efficiency Boost Battle
          </h6>
          <p
            class="ant-prompts-desc"
          >
            How can I work faster and better?
          </p>
        </div>
      </div>
      <div
        class="ant-prompts-item"
      >
        <div
          class="ant-prompts-icon"
        >
          <span
            aria-label="smile"
            class="anticon anticon-smile"
            role="img"
            style="color: #52C41A;"
          >
            <svg
              aria-hidden="true"
              data-icon="smile"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-prompts-content"
        >
          <h6
            class="ant-prompts-label"
          >
            Tell me a Joke
          </h6>
          <p
            class="ant-prompts-desc"
          >
            Why do not ants get sick? Because they have tiny ant-bodies!
          </p>
        </div>
      </div>
      <div
        class="ant-prompts-item"
      >
        <div
          class="ant-prompts-icon"
        >
          <span
            aria-label="warning"
            class="anticon anticon-warning"
            role="img"
            style="color: #FF4D4F;"
          >
            <svg
              aria-hidden="true"
              data-icon="warning"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-prompts-content"
        >
          <h6
            class="ant-prompts-label"
          >
            Common Issue Solutions
          </h6>
          <p
            class="ant-prompts-desc"
          >
            How to solve common issues? Share some tips!
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/prompts/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/prompts/demo/disabled.tsx extend context correctly 1`] = `
<div
  class="ant-prompts"
>
  <h5
    class="ant-typography ant-prompts-title"
  >
    ☕️ It's time to relax!
  </h5>
  <div
    class="ant-prompts-list"
  >
    <div
      class="ant-prompts-item ant-prompts-item-disabled"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
          style="color: #52C41A;"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Task Completion Secrets
        </h6>
        <p
          class="ant-prompts-desc"
        >
          What are some tricks for getting tasks done?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="coffee"
          class="anticon anticon-coffee"
          role="img"
          style="color: #964B00;"
        >
          <svg
            aria-hidden="true"
            data-icon="coffee"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M275 281c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36zm613 144H768c0-39.8-32.2-72-72-72H200c-39.8 0-72 32.2-72 72v248c0 3.4.2 6.7.7 9.9-.5 7-.7 14-.7 21.1 0 176.7 143.3 320 320 320 160.1 0 292.7-117.5 316.3-271H888c39.8 0 72-32.2 72-72V497c0-39.8-32.2-72-72-72zM696 681h-1.1c.7 7.6 1.1 15.2 1.1 23 0 137-111 248-248 248S200 841 200 704c0-7.8.4-15.4 1.1-23H200V425h496v256zm192-8H776V497h112v176zM613 281c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36zm-170 0c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Time for a Coffee Break
        </h6>
        <p
          class="ant-prompts-desc"
        >
          How to rest effectively after long hours of work?
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/prompts/demo/disabled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/prompts/demo/flex-vertical.tsx extend context correctly 1`] = `
<div
  class="ant-prompts"
>
  <h5
    class="ant-typography ant-prompts-title"
  >
    🤔 You might also want to ask:
  </h5>
  <div
    class="ant-prompts-list ant-prompts-list-vertical"
  >
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="coffee"
          class="anticon anticon-coffee"
          role="img"
          style="color: #964B00;"
        >
          <svg
            aria-hidden="true"
            data-icon="coffee"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M275 281c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36zm613 144H768c0-39.8-32.2-72-72-72H200c-39.8 0-72 32.2-72 72v248c0 3.4.2 6.7.7 9.9-.5 7-.7 14-.7 21.1 0 176.7 143.3 320 320 320 160.1 0 292.7-117.5 316.3-271H888c39.8 0 72-32.2 72-72V497c0-39.8-32.2-72-72-72zM696 681h-1.1c.7 7.6 1.1 15.2 1.1 23 0 137-111 248-248 248S200 841 200 704c0-7.8.4-15.4 1.1-23H200V425h496v256zm192-8H776V497h112v176zM613 281c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36zm-170 0c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          How to rest effectively after long hours of work?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="smile"
          class="anticon anticon-smile"
          role="img"
          style="color: #FAAD14;"
        >
          <svg
            aria-hidden="true"
            data-icon="smile"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          What are the secrets to maintaining a positive mindset?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="fire"
          class="anticon anticon-fire"
          role="img"
          style="color: #FF4D4F;"
        >
          <svg
            aria-hidden="true"
            data-icon="fire"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M834.1 469.2A347.49 347.49 0 00751.2 354l-29.1-26.7a8.09 8.09 0 00-13 3.3l-13 37.3c-8.1 23.4-23 47.3-44.1 70.8-1.4 1.5-3 1.9-4.1 2-1.1.1-2.8-.1-4.3-1.5-1.4-1.2-2.1-3-2-4.8 3.7-60.2-14.3-128.1-53.7-202C555.3 171 510 123.1 453.4 89.7l-41.3-24.3c-5.4-3.2-12.3 1-12 7.3l2.2 48c1.5 32.8-2.3 61.8-11.3 85.9-11 29.5-26.8 56.9-47 81.5a295.64 295.64 0 01-47.5 46.1 352.6 352.6 0 00-100.3 121.5A347.75 347.75 0 00160 610c0 47.2 9.3 92.9 27.7 136a349.4 349.4 0 0075.5 110.9c32.4 32 70 57.2 111.9 74.7C418.5 949.8 464.5 959 512 959s93.5-9.2 136.9-27.3A348.6 348.6 0 00760.8 857c32.4-32 57.8-69.4 75.5-110.9a344.2 344.2 0 0027.7-136c0-48.8-10-96.2-29.9-140.9zM713 808.5c-53.7 53.2-125 82.4-201 82.4s-147.3-29.2-201-82.4c-53.5-53.1-83-123.5-83-198.4 0-43.5 9.8-85.2 29.1-124 18.8-37.9 46.8-71.8 80.8-97.9a349.6 349.6 0 0058.6-56.8c25-30.5 44.6-64.5 58.2-101a240 240 0 0012.1-46.5c24.1 22.2 44.3 49 61.2 80.4 33.4 62.6 48.8 118.3 45.8 165.7a74.01 74.01 0 0024.4 59.8 73.36 73.36 0 0053.4 18.8c19.7-1 37.8-9.7 51-24.4 13.3-14.9 24.8-30.1 34.4-45.6 14 17.9 25.7 37.4 35 58.4 15.9 35.8 24 73.9 24 113.1 0 74.9-29.5 145.4-83 198.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          How to stay calm under immense pressure?
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/prompts/demo/flex-vertical.tsx extend context correctly 2`] = `[]`;

exports[`renders components/prompts/demo/flex-wrap.tsx extend context correctly 1`] = `
<div
  class="ant-prompts"
>
  <h5
    class="ant-typography ant-prompts-title"
  >
    ✨ Inspirational Sparks and Marvelous Tips
  </h5>
  <div
    class="ant-prompts-list ant-prompts-list-wrap"
  >
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="bulb"
          class="anticon anticon-bulb"
          role="img"
          style="color: #FFD700;"
        >
          <svg
            aria-hidden="true"
            data-icon="bulb"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          Got any sparks for a new project?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle"
          role="img"
          style="color: #1890FF;"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          Help me understand the background of this topic.
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="warning"
          class="anticon anticon-warning"
          role="img"
          style="color: #FF4D4F;"
        >
          <svg
            aria-hidden="true"
            data-icon="warning"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          How to solve common issues? Share some tips!
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="rocket"
          class="anticon anticon-rocket"
          role="img"
          style="color: #722ED1;"
        >
          <svg
            aria-hidden="true"
            data-icon="rocket"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          How can I work faster and better?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="check-circle"
          class="anticon anticon-check-circle"
          role="img"
          style="color: #52C41A;"
        >
          <svg
            aria-hidden="true"
            data-icon="check-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
            />
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          What are some tricks for getting tasks done?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="coffee"
          class="anticon anticon-coffee"
          role="img"
          style="color: #964B00;"
        >
          <svg
            aria-hidden="true"
            data-icon="coffee"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M275 281c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36zm613 144H768c0-39.8-32.2-72-72-72H200c-39.8 0-72 32.2-72 72v248c0 3.4.2 6.7.7 9.9-.5 7-.7 14-.7 21.1 0 176.7 143.3 320 320 320 160.1 0 292.7-117.5 316.3-271H888c39.8 0 72-32.2 72-72V497c0-39.8-32.2-72-72-72zM696 681h-1.1c.7 7.6 1.1 15.2 1.1 23 0 137-111 248-248 248S200 841 200 704c0-7.8.4-15.4 1.1-23H200V425h496v256zm192-8H776V497h112v176zM613 281c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36zm-170 0c19.9 0 36-16.1 36-36V36c0-19.9-16.1-36-36-36s-36 16.1-36 36v209c0 19.9 16.1 36 36 36z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          How to rest effectively after long hours of work?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="smile"
          class="anticon anticon-smile"
          role="img"
          style="color: #FAAD14;"
        >
          <svg
            aria-hidden="true"
            data-icon="smile"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          What are the secrets to maintaining a positive mindset?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="fire"
          class="anticon anticon-fire"
          role="img"
          style="color: #FF4D4F;"
        >
          <svg
            aria-hidden="true"
            data-icon="fire"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M834.1 469.2A347.49 347.49 0 00751.2 354l-29.1-26.7a8.09 8.09 0 00-13 3.3l-13 37.3c-8.1 23.4-23 47.3-44.1 70.8-1.4 1.5-3 1.9-4.1 2-1.1.1-2.8-.1-4.3-1.5-1.4-1.2-2.1-3-2-4.8 3.7-60.2-14.3-128.1-53.7-202C555.3 171 510 123.1 453.4 89.7l-41.3-24.3c-5.4-3.2-12.3 1-12 7.3l2.2 48c1.5 32.8-2.3 61.8-11.3 85.9-11 29.5-26.8 56.9-47 81.5a295.64 295.64 0 01-47.5 46.1 352.6 352.6 0 00-100.3 121.5A347.75 347.75 0 00160 610c0 47.2 9.3 92.9 27.7 136a349.4 349.4 0 0075.5 110.9c32.4 32 70 57.2 111.9 74.7C418.5 949.8 464.5 959 512 959s93.5-9.2 136.9-27.3A348.6 348.6 0 00760.8 857c32.4-32 57.8-69.4 75.5-110.9a344.2 344.2 0 0027.7-136c0-48.8-10-96.2-29.9-140.9zM713 808.5c-53.7 53.2-125 82.4-201 82.4s-147.3-29.2-201-82.4c-53.5-53.1-83-123.5-83-198.4 0-43.5 9.8-85.2 29.1-124 18.8-37.9 46.8-71.8 80.8-97.9a349.6 349.6 0 0058.6-56.8c25-30.5 44.6-64.5 58.2-101a240 240 0 0012.1-46.5c24.1 22.2 44.3 49 61.2 80.4 33.4 62.6 48.8 118.3 45.8 165.7a74.01 74.01 0 0024.4 59.8 73.36 73.36 0 0053.4 18.8c19.7-1 37.8-9.7 51-24.4 13.3-14.9 24.8-30.1 34.4-45.6 14 17.9 25.7 37.4 35 58.4 15.9 35.8 24 73.9 24 113.1 0 74.9-29.5 145.4-83 198.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <p
          class="ant-prompts-desc"
        >
          How to stay calm under immense pressure?
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/prompts/demo/flex-wrap.tsx extend context correctly 2`] = `[]`;

exports[`renders components/prompts/demo/flex-wrap-fixed.tsx extend context correctly 1`] = `
<div
  class="ant-prompts"
>
  <h5
    class="ant-typography ant-prompts-title"
  >
    ✨ Inspirational Sparks and Marvelous Tips
  </h5>
  <div
    class="ant-prompts-list ant-prompts-list-wrap"
  >
    <div
      class="ant-prompts-item"
      style="width: calc(50% - 6px); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="bulb"
          class="anticon anticon-bulb"
          role="img"
          style="color: #FFD700;"
        >
          <svg
            aria-hidden="true"
            data-icon="bulb"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Ignite Your Creativity
        </h6>
        <p
          class="ant-prompts-desc"
        >
          Got any sparks for a new project?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
      style="width: calc(50% - 6px); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle"
          role="img"
          style="color: #1890FF;"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Uncover Background Info
        </h6>
        <p
          class="ant-prompts-desc"
        >
          Help me understand the background of this topic.
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
      style="width: calc(50% - 6px); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="rocket"
          class="anticon anticon-rocket"
          role="img"
          style="color: #722ED1;"
        >
          <svg
            aria-hidden="true"
            data-icon="rocket"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Efficiency Boost Battle
        </h6>
        <p
          class="ant-prompts-desc"
        >
          How can I work faster and better?
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
      style="width: calc(50% - 6px); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="smile"
          class="anticon anticon-smile"
          role="img"
          style="color: #52C41A;"
        >
          <svg
            aria-hidden="true"
            data-icon="smile"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Tell me a Joke
        </h6>
        <p
          class="ant-prompts-desc"
        >
          Why do not ants get sick? Because they have tiny ant-bodies!
        </p>
      </div>
    </div>
    <div
      class="ant-prompts-item"
      style="width: calc(50% - 6px); flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
    >
      <div
        class="ant-prompts-icon"
      >
        <span
          aria-label="warning"
          class="anticon anticon-warning"
          role="img"
          style="color: #FF4D4F;"
        >
          <svg
            aria-hidden="true"
            data-icon="warning"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 720a48 48 0 1096 0 48 48 0 10-96 0zm16-304v184c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V416c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8zm475.7 440l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zm-783.5-27.9L512 239.9l339.8 588.2H172.2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-prompts-content"
      >
        <h6
          class="ant-prompts-label"
        >
          Common Issue Solutions
        </h6>
        <p
          class="ant-prompts-desc"
        >
          How to solve common issues? Share some tips!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/prompts/demo/flex-wrap-fixed.tsx extend context correctly 2`] = `[]`;

exports[`renders components/prompts/demo/nest.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <div
    class="ant-card ant-card-bordered"
    style="border-radius: 0px; border: 0px;"
  >
    <div
      class="ant-card-body"
    >
      <div
        class="ant-prompts"
      >
        <h5
          class="ant-typography ant-prompts-title"
        >
          Do you want?
        </h5>
        <div
          class="ant-prompts-list ant-prompts-list-wrap"
        >
          <div
            class="ant-prompts-item ant-prompts-item-has-nest"
            style="width: calc(30% - 6px); background-image: linear-gradient(137deg, #e5f4ff 0%, #efe7ff 100%); border: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
          >
            <div
              class="ant-prompts-content"
            >
              <h6
                class="ant-prompts-label"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="fire"
                      class="anticon anticon-fire"
                      role="img"
                      style="color: #FF4D4F;"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="fire"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M834.1 469.2A347.49 347.49 0 00751.2 354l-29.1-26.7a8.09 8.09 0 00-13 3.3l-13 37.3c-8.1 23.4-23 47.3-44.1 70.8-1.4 1.5-3 1.9-4.1 2-1.1.1-2.8-.1-4.3-1.5-1.4-1.2-2.1-3-2-4.8 3.7-60.2-14.3-128.1-53.7-202C555.3 171 510 123.1 453.4 89.7l-41.3-24.3c-5.4-3.2-12.3 1-12 7.3l2.2 48c1.5 32.8-2.3 61.8-11.3 85.9-11 29.5-26.8 56.9-47 81.5a295.64 295.64 0 01-47.5 46.1 352.6 352.6 0 00-100.3 121.5A347.75 347.75 0 00160 610c0 47.2 9.3 92.9 27.7 136a349.4 349.4 0 0075.5 110.9c32.4 32 70 57.2 111.9 74.7C418.5 949.8 464.5 959 512 959s93.5-9.2 136.9-27.3A348.6 348.6 0 00760.8 857c32.4-32 57.8-69.4 75.5-110.9a344.2 344.2 0 0027.7-136c0-48.8-10-96.2-29.9-140.9zM713 808.5c-53.7 53.2-125 82.4-201 82.4s-147.3-29.2-201-82.4c-53.5-53.1-83-123.5-83-198.4 0-43.5 9.8-85.2 29.1-124 18.8-37.9 46.8-71.8 80.8-97.9a349.6 349.6 0 0058.6-56.8c25-30.5 44.6-64.5 58.2-101a240 240 0 0012.1-46.5c24.1 22.2 44.3 49 61.2 80.4 33.4 62.6 48.8 118.3 45.8 165.7a74.01 74.01 0 0024.4 59.8 73.36 73.36 0 0053.4 18.8c19.7-1 37.8-9.7 51-24.4 13.3-14.9 24.8-30.1 34.4-45.6 14 17.9 25.7 37.4 35 58.4 15.9 35.8 24 73.9 24 113.1 0 74.9-29.5 145.4-83 198.4z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      Hot Topics
                    </span>
                  </div>
                </div>
              </h6>
              <p
                class="ant-prompts-desc"
              >
                What are you interested in?
              </p>
              <div
                class="ant-prompts ant-prompts-nested"
              >
                <div
                  class="ant-prompts-list ant-prompts-list-vertical"
                >
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-content"
                    >
                      <p
                        class="ant-prompts-desc"
                      >
                        What's new in X?
                      </p>
                    </div>
                  </div>
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-content"
                    >
                      <p
                        class="ant-prompts-desc"
                      >
                        What's AGI?
                      </p>
                    </div>
                  </div>
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-content"
                    >
                      <p
                        class="ant-prompts-desc"
                      >
                        Where is the doc?
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-prompts-item ant-prompts-item-has-nest"
            style="width: calc(30% - 6px); background-image: linear-gradient(137deg, #e5f4ff 0%, #efe7ff 100%); border: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
          >
            <div
              class="ant-prompts-content"
            >
              <h6
                class="ant-prompts-label"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="read"
                      class="anticon anticon-read"
                      role="img"
                      style="color: #1890FF;"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="read"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M928 161H699.2c-49.1 0-97.1 14.1-138.4 40.7L512 233l-48.8-31.3A255.2 255.2 0 00324.8 161H96c-17.7 0-32 14.3-32 32v568c0 17.7 14.3 32 32 32h228.8c49.1 0 97.1 14.1 138.4 40.7l44.4 28.6c1.3.8 2.8 1.3 4.3 1.3s3-.4 4.3-1.3l44.4-28.6C602 807.1 650.1 793 699.2 793H928c17.7 0 32-14.3 32-32V193c0-17.7-14.3-32-32-32zM324.8 721H136V233h188.8c35.4 0 69.8 10.1 99.5 29.2l48.8 31.3 6.9 4.5v462c-47.6-25.6-100.8-39-155.2-39zm563.2 0H699.2c-54.4 0-107.6 13.4-155.2 39V298l6.9-4.5 48.8-31.3c29.7-19.1 64.1-29.2 99.5-29.2H888v488zM396.9 361H211.1c-3.9 0-7.1 3.4-7.1 7.5v45c0 4.1 3.2 7.5 7.1 7.5h185.7c3.9 0 7.1-3.4 7.1-7.5v-45c.1-4.1-3.1-7.5-7-7.5zm223.1 7.5v45c0 4.1 3.2 7.5 7.1 7.5h185.7c3.9 0 7.1-3.4 7.1-7.5v-45c0-4.1-3.2-7.5-7.1-7.5H627.1c-3.9 0-7.1 3.4-7.1 7.5zM396.9 501H211.1c-3.9 0-7.1 3.4-7.1 7.5v45c0 4.1 3.2 7.5 7.1 7.5h185.7c3.9 0 7.1-3.4 7.1-7.5v-45c.1-4.1-3.1-7.5-7-7.5zm416 0H627.1c-3.9 0-7.1 3.4-7.1 7.5v45c0 4.1 3.2 7.5 7.1 7.5h185.7c3.9 0 7.1-3.4 7.1-7.5v-45c.1-4.1-3.1-7.5-7-7.5z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      Design Guide
                    </span>
                  </div>
                </div>
              </h6>
              <p
                class="ant-prompts-desc"
              >
                How to design a good product?
              </p>
              <div
                class="ant-prompts ant-prompts-nested"
              >
                <div
                  class="ant-prompts-list ant-prompts-list-vertical"
                >
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-icon"
                    >
                      <span
                        aria-label="heart"
                        class="anticon anticon-heart"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="heart"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M923 283.6a260.04 260.04 0 00-56.9-82.8 264.4 264.4 0 00-84-55.5A265.34 265.34 0 00679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 00-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="ant-prompts-content"
                    >
                      <p
                        class="ant-prompts-desc"
                      >
                        Know the well
                      </p>
                    </div>
                  </div>
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-icon"
                    >
                      <span
                        aria-label="smile"
                        class="anticon anticon-smile"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="smile"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="ant-prompts-content"
                    >
                      <p
                        class="ant-prompts-desc"
                      >
                        Set the AI role
                      </p>
                    </div>
                  </div>
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-icon"
                    >
                      <span
                        aria-label="comment"
                        class="anticon anticon-comment"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="comment"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <defs>
                            <style />
                          </defs>
                          <path
                            d="M573 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40zm-280 0c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                          />
                          <path
                            d="M894 345a343.92 343.92 0 00-189-130v.1c-17.1-19-36.4-36.5-58-52.1-163.7-119-393.5-82.7-513 81-96.3 133-92.2 311.9 6 439l.8 132.6c0 3.2.5 6.4 1.5 9.4a31.95 31.95 0 0040.1 20.9L309 806c33.5 11.9 68.1 18.7 102.5 20.6l-.5.4c89.1 64.9 205.9 84.4 313 49l127.1 41.4c3.2 1 6.5 1.6 9.9 1.6 17.7 0 32-14.3 32-32V753c88.1-119.6 90.4-284.9 1-408zM323 735l-12-5-99 31-1-104-8-9c-84.6-103.2-90.2-251.9-11-361 96.4-132.2 281.2-161.4 413-66 132.2 96.1 161.5 280.6 66 412-80.1 109.9-223.5 150.5-348 102zm505-17l-8 10 1 104-98-33-12 5c-56 20.8-115.7 22.5-171 7l-.2-.1A367.31 367.31 0 00729 676c76.4-105.3 88.8-237.6 44.4-350.4l.6.4c23 16.5 44.1 37.1 62 62 72.6 99.6 68.5 235.2-8 330z"
                          />
                          <path
                            d="M433 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="ant-prompts-content"
                    >
                      <p
                        class="ant-prompts-desc"
                      >
                        Express the feeling
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-prompts-item ant-prompts-item-has-nest"
            style="width: calc(30% - 6px); background-image: linear-gradient(137deg, #e5f4ff 0%, #efe7ff 100%); border: 0px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;"
          >
            <div
              class="ant-prompts-content"
            >
              <h6
                class="ant-prompts-label"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-start ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      aria-label="rocket"
                      class="anticon anticon-rocket"
                      role="img"
                      style="color: #722ED1;"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="rocket"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      Start Creating
                    </span>
                  </div>
                </div>
              </h6>
              <p
                class="ant-prompts-desc"
              >
                How to start a new project?
              </p>
              <div
                class="ant-prompts ant-prompts-nested"
              >
                <div
                  class="ant-prompts-list ant-prompts-list-vertical"
                >
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-content"
                    >
                      <h6
                        class="ant-prompts-label"
                      >
                        Fast Start
                      </h6>
                      <p
                        class="ant-prompts-desc"
                      >
                        Install Ant Design X
                      </p>
                    </div>
                  </div>
                  <div
                    class="ant-prompts-item"
                    style="background: rgba(255, 255, 255, 0.45); border: 1px solid #FFF;"
                  >
                    <div
                      class="ant-prompts-content"
                    >
                      <h6
                        class="ant-prompts-label"
                      >
                        Online Playground
                      </h6>
                      <p
                        class="ant-prompts-desc"
                      >
                        Play on the web without installing
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/prompts/demo/nest.tsx extend context correctly 2`] = `[]`;
